Fixing input alignment

--- a/style.css
+++ b/style.css
@@ -4,5 +4,6 @@ h1{color:grey; font:verdana;}
  width:300px; padding:20px; border-radius:25px;
   margin: auto;}
 .highlight{background-color: yellow;}
+.inset{padding:40px}
 
 
